--- a/styles/scss/style.css
+++ b/styles/scss/style.css
@@ -1507,68 +1507,29 @@ textarea:focus, input:focus {
   margin: 20px 0 20px 15px;
 }
 
-.form-dropdown {
+.form-dropdown__custom {
   position: relative;
-  width: 90%;
-}
-@media (min-width: 992px) {
-  .form-dropdown {
-    width: 100%;
-  }
-}
-
-.form-dropdown__selected-input {
   border-bottom: 1px solid #000;
-  padding: 3px;
-  position: relative;
-  margin-top: 10px;
-  cursor: pointer;
-}
-.form-dropdown__selected-input:hover {
-  background-color: #9AC8E4;
-  border-bottom: 2px solid #000;
 }
 
-.form-dropdown__hover {
-  border-bottom: 2px solid #000;
-}
-
-.form-dropdown__invisible-value {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-}
-
-.form-dropdown__options {
-  position: absolute;
+.form-dropdown__input {
+  outline: none;
   background-color: #fff;
-  width: 100%;
-  top: 35px;
-  z-index: 10;
-  border: 1px solid #000;
-}
-@media (min-width: 992px) {
-  .form-dropdown__options {
-    width: 120%;
-  }
-}
-.form-dropdown__options ul option {
+  border: 0;
+  padding: 3px;
   cursor: pointer;
-  padding: 5px 20px;
-  display: block;
-}
-@media (min-width: 992px) {
-  .form-dropdown__options ul option {
-    padding: 5px;
-  }
-}
-.form-dropdown__options ul option:hover {
-  background-color: #9AC8E4;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
-.form-dropdown__arrow-img {
-  position: absolute;
-  right: 5px;
+.option {
+  background-color: #fff;
+}
+.option:hover {
+  background-color: #9AC8E4;
 }
 
 .login {
